2.1.0/_sources/gallery/pyplots/dollar_ticks.rst.txt


.. _sphx_glr_gallery_pyplots_dollar_ticks.py:


============
Dollar Ticks
============





.. image:: /gallery/pyplots/images/sphx_glr_dollar_ticks_001.png
    :align: center





.. code-block:: python

    import numpy as np
    import matplotlib.pyplot as plt
    import matplotlib.ticker as ticker

    # Fixing random state for reproducibility
    np.random.seed(19680801)

    fig = plt.figure()
    ax = fig.add_subplot(111)
    ax.plot(100*np.random.rand(20))

    formatter = ticker.FormatStrFormatter('$%1.2f')
    ax.yaxis.set_major_formatter(formatter)

    for tick in ax.yaxis.get_major_ticks():
        tick.label1On = False
        tick.label2On = True
        tick.label2.set_color('green')

    plt.show()

**Total running time of the script:** ( 0 minutes  0.022 seconds)



.. container:: sphx-glr-footer


  .. container:: sphx-glr-download

     :download:`Download Python source code: dollar_ticks.py <dollar_ticks.py>`



  .. container:: sphx-glr-download

     :download:`Download Jupyter notebook: dollar_ticks.ipynb <dollar_ticks.ipynb>`

.. rst-class:: sphx-glr-signature

    `Generated by Sphinx-Gallery <https://sphinx-gallery.readthedocs.io>`_
